--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.232.57.174:9000/</sonar.host.url>
+		<sonar.host.url>http://172.31.41.219:9000/</sonar.host.url>172.31.41.219
 		<sonar.login>0593ea5097f40f7127ac438714c53741ba777d3a</sonar.login>
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -98,13 +98,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://3.110.214.201:9980/sai/repository/walmart-releases/</url>
+	      <url>http://172.31.39.215:9980/sai/repository/walmart-releases/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://3.110.214.201:9980/sai/repository/walmart-snapshot/</url>
+	      <url>http://172.31.39.215:9980/sai/repository/walmart-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
