--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://172.31.41.219:9000/</sonar.host.url>172.31.41.219
+		<sonar.host.url>http://172.31.41.219:9000/</sonar.host.url>
 		<sonar.login>0593ea5097f40f7127ac438714c53741ba777d3a</sonar.login>
 		
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
